--- a/apitest/pom.xml
+++ b/apitest/pom.xml
@@ -17,6 +17,15 @@
 		</license>
 	</licenses>
 
+	<developers>
+		<developer>
+			<name>Mosip</name>
+			<email>mosip.emailnotifier@gmail.com</email>
+			<organization>io.mosip</organization>
+			<organizationUrl>https://github.com/mosip/admin-services</organizationUrl>
+		</developer>
+	</developers>
+
 	<scm>
 		<connection>scm:git:git://github.com/mosip/admin-services.git</connection>
 		<developerConnection>scm:git:ssh://github.com:mosip/admin-services.git</developerConnection>
