--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -219,7 +219,7 @@
 			<artifactId>bcutil-jdk18on</artifactId>
 			<version>1.78.1</version>
 		</dependency>
-		<dependency>
+	<!--	<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
 			<version>1.2.1-java21-SNAPSHOT</version>
@@ -229,7 +229,7 @@
 					<artifactId>spring-boot-starter-webflux</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 	<build>
 		<plugins>
