--- a/apitest/pom.xml
+++ b/apitest/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>apitest-masterdata</artifactId>
 	<packaging>jar</packaging>
 	<name>apitest-masterdata</name>
-	<description>Parent project of apitest-idrepo</description>
+	<description>Parent project of apitest-masterdata</description>
 	<url>https://github.com/mosip/admin-services</url>
 	<version>1.2.1-SNAPSHOT</version>
 
