--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.hotlist</groupId>
 	<artifactId>hotlist-service</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-RC</version>
 	<name>Hotlist Service</name>
 	<description>Service to block/unblock ids in MOSIP</description>
      <url>https://github.com/mosip/admin-services</url>
@@ -27,11 +27,11 @@
 		<mockito.version>3.3.3</mockito.version>
 
 		<!-- kernel properties -->
-		<kernel-core.version>1.3.0-SNAPSHOT</kernel-core.version>
-		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
-		<kernel-websubclient-api.version>1.3.0-SNAPSHOT</kernel-websubclient-api.version>
-		<kernel-logger-logback.version>1.3.0-SNAPSHOT</kernel-logger-logback.version>
-		<kernel.auth.adaptor.version>1.3.0-SNAPSHOT</kernel.auth.adaptor.version>
+		<kernel-core.version>1.3.0-beta.1</kernel-core.version>
+		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
+		<kernel-websubclient-api.version>1.3.0-beta.1</kernel-websubclient-api.version>
+		<kernel-logger-logback.version>1.3.0-beta.1</kernel-logger-logback.version>
+		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
 	</properties>
