--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -9,7 +9,7 @@
 	<name>kernel-masterdata-service</name>
 	<description>Mosip commons project </description>
 	<url>https://github.com/mosip/commons</url>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-RC</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -108,12 +108,12 @@
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.applicant-type.version>1.3.0-SNAPSHOT</kernel.applicant-type.version>
-		<kernel.logger.logback.version>1.3.0-SNAPSHOT</kernel.logger.logback.version>
+		<kernel.applicant-type.version>1.3.0-beta.1</kernel.applicant-type.version>
+		<kernel.logger.logback.version>1.3.0-beta.1</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
-		<kernel.websubclient.api.version>1.3.0-SNAPSHOT</kernel.websubclient.api.version>
-		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
-		<mosip.openid.bridge.version>1.3.0-SNAPSHOT</mosip.openid.bridge.version>
+		<kernel.websubclient.api.version>1.3.0-beta.1</kernel.websubclient.api.version>
+		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
+		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
 	</properties>
