--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -9,7 +9,7 @@
 	<name>kernel-masterdata-service</name>
 	<description>Mosip commons project </description>
 	<url>https://github.com/mosip/commons</url>
-	<version>1.2.1-rc1</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -109,11 +109,11 @@
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
-		<kernel.applicant-type.version>1.3.0-beta.1</kernel.applicant-type.version>
-		<kernel.logger.logback.version>1.3.0-beta.1</kernel.logger.logback.version>
+		<kernel.applicant-type.version>1.2.1-SNAPSHOT</kernel.applicant-type.version>
+		<kernel.logger.logback.version>1.2.1-SNAPSHOT</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
-		<kernel.websubclient.api.version>1.3.0-beta.1</kernel.websubclient.api.version>
-		<kernel.version>1.3.0-beta.1</kernel.version>
+		<kernel.websubclient.api.version>1.2.1-SNAPSHOT</kernel.websubclient.api.version>
+		<kernel.version>1.2.1-SNAPSHOT</kernel.version>
 	</properties>
 
 	<repositories>
@@ -141,7 +141,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.3.0-beta.1</version>
+				<version>1.2.1-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
