--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -7,7 +7,7 @@
 	<name>kernel-syncdata-service</name>
 	<description>Mosip commons project </description>
         <url>https://github.com/mosip/commons</url>
-	<version>1.2.1.1</version>
+	<version>1.2.1.2-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -229,17 +229,17 @@
 		</dependency>
 
 	</dependencies>
-	
+
 <distributionManagement>
 		<snapshotRepository>
                         <id>ossrh</id>
                         <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository> 
+		</snapshotRepository>
                  <repository>
                         <id>ossrh</id>
                         <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository> 
-        </distributionManagement> 
+                </repository>
+        </distributionManagement>
         <build>
 <plugins>
 	<plugin>
@@ -322,7 +322,7 @@
                         <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                         <autoReleaseAfterClose>false</autoReleaseAfterClose>
                   </configuration>
-                </plugin> 
+                </plugin>
 
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
