--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -28,7 +28,6 @@
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
-		<spring.boot.version>3.2.5</spring.boot.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 	</properties>
 	<dependencyManagement>
@@ -344,7 +343,7 @@
 		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
-			<version>${spring.boot.version}</version>
+			<version>3.2.3</version>
 			<configuration>
 				<executable>true</executable>
 				<layout>ZIP</layout>
